--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "0.4.x",
-    "grunt-contrib-clean": "0.4.x"
+    "grunt-contrib-clean": "0.4.x",
+    "grunt-contrib-copy": "~0.3.2"
   }
 }
